# schizospider

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: capture_docs_screenshots.py
src/schizospider/: __main__.py  cli.py  config.py  crawler.py  events.py  extractor.py  fetcher.py  store.py  urls.py
src/schizospider/report/: build.py
src/schizospider/report/templates/: page.html.j2  report.html.j2
src/schizospider/report/templates/assets/: graph.js  report.css  report.js
src/schizospider/tui/: app.py
tests/: test_extractor.py  test_store.py  test_urls.py
