[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schizospider"
version = "0.1.0"
description = "Interactive crawler for weird/artsy websites. Screenshots every page, follows off-domain links one hop, produces an HTML report."
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49,<2.0",
    "textual>=0.85,<1.0",
    "tldextract>=5.1,<6.0",
    "jinja2>=3.1,<4.0",
    "chardet>=5.2,<6.0",
    "click>=8.1,<9.0",
    "Pillow>=10.0,<12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
schizospider = "schizospider.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
schizospider = ["report/templates/*.j2", "report/templates/assets/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
